--- a/assets/style.css
+++ b/assets/style.css
@@ -152,9 +152,20 @@ h1 {
 .rsschool-icon {
     width: 30%;
 }
+.projects {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.project_link {
+    width: 45%;
+    margin: 3px;
+}
 
 .projects__icon {
-    width: 60%;
+    width: 100%;
+    height: 100%;
 }
 
 .about {
